# scrapybara-cookbook

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
chat-playground/: README.md  package.json  pnpm-lock.yaml
chat-playground/src/app/: globals.css
chat-playground/src/app/api/chat/: route.ts
chat-playground/src/components/: chat-welcome.tsx  loader.tsx  messages.tsx
chat-playground/src/server/: actions.ts
computer-use-playground/: README.md  package.json  pnpm-lock.yaml
computer-use-playground/src/app/: globals.css  layout.tsx  page.tsx
computer-use-playground/src/app/api/chat/: route.ts
computer-use-playground/src/components/: chat-welcome.tsx  instance-frame.tsx  loader.tsx  message.tsx  messages.tsx
computer-use-playground/src/lib/: utils.ts
computer-use-playground/src/server/: actions.ts
copycapy/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json
copycapy/src/: index.ts
dungeon-crawler/: README.md  main.py  pyproject.toml
dungeon-crawler/src/: main.py
examples/: code_execution.py  competetive_intel.py  competitive_intel.py  github_analysis.py  market_research.py  sales_research.py
resume-builder/: main.py  pyproject.toml
scrapybara-cli/: README.md  pyproject.toml
scrapybara-cli/src/: agent.py  main.py
teleo/: index.html  main.js
w25-scraping/: main.py  pyproject.toml
website-copycat/: main.py  pyproject.toml
wide-research/: .gitignore  README.md  pyproject.toml
wide-research/src/: main.py
