[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapybara-cli"
version = "0.2.0"
description = "CLI tool for controlling virtual machines with Claude"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "scrapybara>=2.3.6,<3",
]

[project.scripts]
scrapybara-cli = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system.sdist]
include = [
    "/src",
    "README.md",
    "LICENSE",
]

[build-system.wheel]
packages = ["src"]
